@@ -3,13 +3,12 @@ package io.github.betterclient.fabric;
 import io.github.betterclient.client.Application;
 
 import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
-import java.security.DigestInputStream;
-import java.security.MessageDigest;
 import java.util.ArrayList;
 import java.util.Iterator;
 import java.util.List;
@@ -32,21 +31,21 @@ public class Util {
         return bytes;
     }
 
-    public static File urlToFile(String url) throws IOException {
+    public static File urlToFile(String url) throws IOException, URISyntaxException {
         return Files.write(
                 File.createTempFile(
                         url.substring(url.lastIndexOf('/') + 1, url.lastIndexOf(".")),
                         url.substring(url.lastIndexOf(".") + 1)
                 ).toPath(),
 
-                readAndClose(new URL(url).openConnection().getInputStream())
+                readAndClose(new URI(url).toURL().openConnection().getInputStream())
         ).toFile();
     }
 
-    public static File urlToFile(String url, File f) throws IOException {
+    public static File urlToFile(String url, File f) throws IOException, URISyntaxException {
         return Files.write(
                 f.toPath(),
-                readAndClose(new URL(url).openConnection().getInputStream())
+                readAndClose(new URI(url).toURL().openConnection().getInputStream())
         ).toFile();
     }
 
@@ -70,7 +69,6 @@ public class Util {
                         ).toFile()) : null;
     }
 
-    @SuppressWarnings("all") //sacrifice the warning for the 1 liner
     public static File downloadIfFirstLaunch(String url) throws IOException {
         return downloadIfFirstLaunch(Application.modJarsFolder, url);
     }
